force-app/main/default/objects/RS_Guided_Workflow_Rooting_Data__mdt/RS_Guided_Workflow_Rooting_Data__mdt.object-meta.xml
<CustomObject>
    <label>Guided Workflow Rooting Data</label>
    <pluralLabel>Guided Workflow Rooting Data</pluralLabel>
</CustomObject>