force-app/main/default/objects/RS_Guided_Workflow_Rooting_Data__mdt/fields/RS_Criteria_Name__c.field-meta.xml
<CustomField>
    <fullName>RS_Criteria_Name__c</fullName>
    <description>Describes the parameter to pick the root  node of the guided workflow record</description>
    <label>Criteria Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>