force-app/main/default/objects/RS_Guided_Workflow_Rooting_Data__mdt/fields/RS_FieldName__c.field-meta.xml
<CustomField>
    <fullName>RS_FieldName__c</fullName>
    <label>FieldName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>