force-app/main/default/objects/RS_Guided_Workflow_Rooting_Data__mdt/fields/RS_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>RS_ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>