force-app/main/default/objects/RS_Guided_Workflow_Rooting_Data__mdt/fields/RS_Workflow_Root_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>RS_Workflow_Root_Action_Name__c</fullName>
    <label>Workflow Root Action Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>